--- a/scss/components/_herobanners.scss
+++ b/scss/components/_herobanners.scss
@@ -4,11 +4,10 @@
 
 .heroBanners {
     width: 100vw;
-    text-align: center;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
     color: $light-color;
+    padding: 0 50px;
     }
 
