--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -4,11 +4,15 @@
 
 .heroBanner__contact {
     @include heroBanners;
-    background-image: $grey-filter-gradient, url(../assets./images/pexels-yura-forrat-12158398.jpg);
+    background-image: $grey-filter-gradient, url(../assets./images/hero5.webp);
+    padding: 0 50px;
     .bannerText {
-        padding: 40px;
-        text-align: left;
+        padding: 40px 0;
     }
 }
 
-
+.doubleSection__index {
+    @include doublegrid;
+    background-image: url(../assets/images/background1.webp);
+    padding: 50px;
+}
