--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -6,18 +6,20 @@
     @include singlegrid;
     color: $light-color;
     background-color: $primary-color;
+    padding: 50px;
 }
 
 .doubleSection {
     @include doublegrid;
-    padding: 0 30px;
+    padding: 0 50px;
 }
 
 .tripleSectionIcon {
-    @include triplegrid;
-    padding: 50px 30px;
+    @include demoTripleGrid;
+    padding: 20px 50px 50px;
     i {
         font-size:xx-large;
+        margin-top: 30px;
     }
 }
 
@@ -29,22 +31,64 @@
     @include imageContainer;
 }
 
+.demoCard{
+    border-radius: 5px;
+    box-shadow: 0 0 2px -1px rgba(0, 0, 0, 0.75); 
+    margin: 20px 0;
+    p {
+        padding:0 20px 20px;
+        color: $dark-color;
+    }
+    img {
+        display: block;
+        width: 100%;
+        height: 18rem;
+        object-fit: cover;
+    }
+    &:hover {
+        transform: translateY(-.5%);
+        box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
+    }
+}
+
 .articleList {
+    padding: 0 50px;
     ul {
         padding: 20px;
         list-style-type: none;
         li {
+            border-radius: 5px;
+            box-shadow: 0 0 2px -1px rgba(0, 0, 0, 0.75);            
+            margin: 10px;
             padding: 10px;
             display: flex;
             align-items: center;
             font-weight: lighter;
-            img {
-                padding-right: 10px;
+            @media (min-width:581px){
+                img {
+                    margin-right: 10px;
+                    min-width: 150px;
+                    max-width: 200px;
+                    padding: 20px 0;
+                }
+            }
+            @media (max-width:580px) {
+                flex-direction: column;
+                div {
+                    h2, p {
+                        text-align: center;
+                    }
+                    img {
+                        display: block;
+                        width: 100vw;
+                        object-fit: contain;
+                    }
+                }
             }
             &:hover {
-                background-color: $section-background-hover;
+                transform: translateY(-.5%);
+                box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
             }
         }
     }
-    
 }
