--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,7 +1,10 @@
 * { 
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
+
 
 body {
     margin: 0; 
@@ -10,7 +13,7 @@ body {
     overflow-x: hidden;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width: 100vw;
-    height: fit-content;
+    min-height: 100vh;
     background-color: #f8f8f8;
     overflow-x: hidden;
 }
