--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -15,11 +15,12 @@ footer {
         background-color: $primary-color;
         color: $light-color;
         text-align: center;
-        padding: 15px;
+        padding: 15px 50px;
     }
     .tripleSection {
         justify-content: center;
-        margin: 20px;
+        margin: 0 5px;
+        padding: 30px 50px;
     }        
     .rights {
         background-color: $dark-color;
