--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,15 +4,15 @@
 
 .heroBanner__index {
     @include heroBanners;
-    background-image: $grey-filter-gradient, url(../assets/images/pexels-sofía-morales-14567680.jpg);
+    background-image: $grey-filter-gradient, url(../assets/images/hero1.webp);
+    padding: 0 50px;
     .bannerText {
-        padding: 40px;
-        text-align: left;
+        padding: 40px 0;
     }
 }
 
 .doubleSection__index {
     @include doublegrid;
-    background-image: url(../assets/images/paper-style-white-monochrome-background_52683-66443.jpg);
-    padding: 0 50px;
+    background-image: url(../assets/images/background1.webp);
+    padding: 50px;
 }
