--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,4 +22,5 @@
 @import './pages/about';
 @import './pages/contact';
 @import './pages/blog';
+@import './pages/article';
 @import './pages/demo';
